--- a/sass/_inicio.scss
+++ b/sass/_inicio.scss
@@ -8,23 +8,26 @@
     left: 0;
     z-index: 3;
     opacity: 0.9;
+    
+    &:hover{
+        transition: 2s;
+        filter: sepia(100%);
+    }
 }
 
-/*Medios de Pago*/
+/*header*/
+header{
+    position: sticky;
+}
+
+/*footer*/
+.texto-footer{
+    display: inline-block;
+    color: $colorDos;
+}
 
 .container-footer{
-    display: flex;
-    justify-content: space-around;
-}
-/*Enlace vuelta inicio*/
-.enlace-vuelta{
-    float: right;
-    text-decoration: none;
-    color: black;
-    transition: 2s;
-    font-size: 2px * 10;
-}
-
-.enlace-vuelta:hover{
-    color: $colorTres;
+    background-color: #333;
+    text-align: center;
+    height: 100%;
 }
