--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,7 +7,7 @@
 @import "../sass/nosotros";
 @import "contacto";
 @import "productos";
-@import "../sass/revendedores";
+@import "../sass/masVendidos";
 
 /*body*/
 
